Sat 20 jan - basic works done , validation and encryption pending

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
-<% include('head')%>
-<h1>Home</h1>
-<% include('foot') %>
+<%- include('head') -%>
+<h1>Welcome</h1>
+<h2><%= user.name %></h2>
+<%- include('foot') -%>
