--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,53 +13,56 @@
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form action="/signup" method="post">
+              <form action="/register" method="post">
                 <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example1cg"
+                    >Your Name</label
+                  >
                   <input
+                    name="name"
                     type="text"
                     id="form3Example1cg"
                     class="form-control form-control-lg"
                     required
                   />
-                  <label class="form-label" for="form3Example1cg"
-                    >Your Name</label
-                  >
                 </div>
 
                 <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example3cg"
+                    >Your Email</label
+                  >
                   <input
+                    name="email"
                     type="email"
                     id="form3Example3cg"
                     class="form-control form-control-lg"
                     required
                   />
-                  <label class="form-label" for="form3Example3cg"
-                    >Your Email</label
-                  >
                 </div>
 
                 <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example4cg"
+                    >Password</label
+                  >
                   <input
+                    name="password"
                     type="password"
                     id="form3Example4cg"
                     class="form-control form-control-lg"
                     required
                   />
-                  <label class="form-label" for="form3Example4cg"
-                    >Password</label
-                  >
                 </div>
 
                 <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example4cdg"
+                    >Repeat your password</label
+                  >
                   <input
                     type="password"
                     id="form3Example4cdg"
                     class="form-control form-control-lg"
                     required
                   />
-                  <label class="form-label" for="form3Example4cdg"
-                    >Repeat your password</label
-                  >
                 </div>
 
                 <div class="form-check d-flex justify-content-center mb-5">
@@ -75,8 +78,15 @@
                     <a href="#!" class="text-body"><u>Terms of service</u></a>
                   </label>
                 </div>
+                <div class="d-flex justify-content-center hideError">
+                  <% if(locals.error){ %>
+                  <p class="text-danger"><%= error %></p>
+                  <% } %>
+                </div>
 
-                <div class="d-flex justify-content-center">
+                <div
+                  class="d-flex flex-column align-items-center justify-content-center"
+                >
                   <button
                     type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
