--- a/views/addUserForm.ejs
+++ b/views/addUserForm.ejs
@@ -29,7 +29,7 @@
               name="email"
               required
             />
-            <% if(error){ %>
+            <% if(locals.error){ %>
             <p class="text-danger hideError"><%= error %></p>
             <% } %>
             <div class="invalid-feedback">
