--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,72 @@
 body {
-  background-color: aqua !important;
+  background-color: rgb(109, 109, 109) !important;
+}
+
+.searchbar {
+  margin-bottom: auto;
+  margin-top: auto;
+  height: fit-content;
+  width: 100%;
+  background-color: #353b48;
+  border-radius: 30px;
+  padding: 10px;
+}
+
+.search_input {
+  color: white;
+  border: 0;
+  outline: 0;
+  background: none;
+  width: 70%;
+  caret-color: transparent;
+  line-height: 30px;
+  transition: width 0.4s linear;
+}
+
+/* .searchbar:hover > .search_input {
+  padding: 0 10px;
+  width: 60%;
+  caret-color: red;
+  transition: width 0.4s linear;
+}
+
+.searchbar:hover > .search_icon {
+  background: white;
+  color: #e74c3c;
+} */
+
+.search_icon {
+  height: 40px;
+  width: 40px;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: white;
+  text-decoration: none;
+  background: white;
+  color: #e74c3c;
+}
+
+/* addUser Button */
+.add-user-button {
+  background-color: #353b48;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 50%;
+}
+.add_icon {
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: white;
+  text-decoration: none;
 }
