--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,24 @@
         <p class="col-2 p-1 m-0 text-start"> Name</p>
         <p class="col-2 p-1 m-0 text-start"> Email</p>
         <p class="col-2 p-1 m-0 text-start">Password</p>
-        <p class="col-2 p-1 m-0 text-start"><a href="/admin/adduser/" class="edit-user-button">Add user</a> </p>
+        <div class="col-4 d-flex justify-content-end gap-1">
+          
+            <div class=" h-100">
+              <div class="d-flex justify-content-center h-100">
+                <div class="searchbar ">
+                  <input class="search_input"  id="searchInput" type="text" name="" placeholder="Search...">
+                  <a id="searchLink" href="/admin/dashboard/?search=" class="search_icon"><i class="fas fa-search"></i></a>
+                </div>
+              </div>
+            </div>
+          <div class=" p-1 m-0 text-start  add-user-button">
+            <a href="/admin/adduser/" class=""><i class="fa-solid fa-user-plus add_icon d-flex justify-content-center align-items-center"></i></a> 
+          </div>
+          <div class=" p-1 m-0 text-start  add-user-button">
+            <a href="/admin/dashboard/" class=""><i class="fa-solid fa-arrows-rotate add_icon d-flex justify-content-center align-items-center"></i></a> 
+          </div>
+
+        </div>
     </div>
   
   <% for(let i=0; i<users.length; i++) { %>
@@ -24,13 +41,13 @@
 
       <!-- User Actions -->
       
-      <div class=" col-2">
+      <div class=" col-4 d-flex justify-content-center gap-5">
         <!-- Edit User Button -->
-        <a href="/admin/edituser/?id=<%= users[i]._id %>" class="edit-user-button">Edit</a>
+        <a href="/admin/edituser/?id=<%= users[i]._id %>" class="edit-user-button"><button class="btn btn-secondary">Edit</button></a>
     <!-- </div> -->
         <!-- Delete User Button  -->
         <!-- <div class="col-2"> -->
-        <a href="/admin/deleteuser/?id=<%= users[i]._id %>" class="delete-user-button" onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+        <a href="/admin/deleteuser/?id=<%= users[i]._id %>" class="delete-user-button" onclick="return confirm('Are you sure you want to delete this user?')"><button class="btn btn-danger">Delete</button></a>
     </div>
 
     </div>
