--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,11 @@
 <%- include('head') -%>
-<h1>Welcome</h1>
-<h2><%= user.name %></h2>
+
+<section>
+  <div
+    class="bg-white d-flex flex-column align-items-center justify-content-center p-5 my-5"
+  >
+    <h1 class="fs-1">Welcome</h1>
+    <h2 class="fs-5"><%= user.name %></h2>
+  </div>
+</section>
 <%- include('foot') -%>
