--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -20,6 +20,7 @@
             class="form-control"
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
+            required
           />
         </div>
         <div class="mb-3">
@@ -29,7 +30,11 @@
             type="password"
             class="form-control"
             id="exampleInputPassword1"
+            required
           />
+          <% if (locals.invalidEmail) { %>
+          <p class="text-danger hideError"><%= invalidEmail %></p>
+          <% } %>
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
