--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,11 @@
   >
     <h1 class="fs-1">Welcome</h1>
     <h2 class="fs-5"><%= user.name %></h2>
+    <div>
+      <a href="/logout">
+        <button class="btn btn-danger">Log out</button>
+      </a>
+    </div>
   </div>
 </section>
 <%- include('foot') -%>
