--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -86,6 +86,7 @@
                   class="d-flex flex-column align-items-center justify-content-center"
                 >
                   <button
+                    id="submitBtn"
                     type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
                   >
